Edição dos arquivos em relação ao header e extend header

--- a/Index.html
+++ b/Index.html
@@ -22,35 +22,26 @@
         <div class="navbar">
             <nav class="navbar-item-container">
                 <a href="#about">About</a>
-                <a href="#">Experience</a>
+                <a href="#experience">Experience</a>
                 <a href="#">Skill</a>
                 <a href="#">Portfolio</a>
                 <a href="#">Contact</a>
-                <a id="resume" href="#">Resume</a>
+                
             </nav>
         </div>
     </header>
-
-    <section id="about">
-        <div class="about-image-container">
+    <div id="extend-header">
+        <div class="extend-header-image-container">
             <img src="img/Profile.png" alt="Profile">
         </div>
-        <div class="about-item-container">
+        <div class="extend-header-item-container">
             <h1>Emanuel <span>Santos</span></h1>
             <h6>Full Stack Developer</h6>
-            <p>
-                Meu nome é Emanuel Jesus Santos e tenho 20 anos de idade.
-                <br>
-                Atualmente estou cursando Análise e Desenvolvimento e Sistemas, no instituto federal de Santa Catarina.
-                <br>
-                Com foco em me tornar um desenvolvedor Full Stack, estou cada dia estudando mais e aprimorando minhas
-                habilidades.
-            </p>
         </div>
-        <div class="about-icon-container">
-            <a href="#"><i class="bi bi-chevron-double-down"></i></a>
+        <div class="extend-header-icon-container">
+            <a href="#experience"><i class="bi bi-chevron-double-down"></i></a>
         </div>
-    </section>
+    </div>
 </body>
 
 </html>
