--- a/Index.html
+++ b/Index.html
@@ -23,7 +23,7 @@
         </div>
         <div class="navbar">
             <nav class="navbar-item-container">
-                <a href="#about" class="navAbout">About</a>
+                <a href="#about">About</a>
                 <a href="#">Experience</a>
                 <a href="#">Skill</a>
                 <a href="#">Portfolio</a>
@@ -50,13 +50,79 @@
             <header>
                 <h1>About Me</h1>
             </header>
-
         </div>
-        <div class="about-content-container">
 
+        <div class="about-content-container">
+            <div class="about-picture">
+                <img src="img/StatickShock.gif" alt="">
+            </div>
+
+            <div class="about-content">
+                <div class="about-content-description">
+                    <p>
+                        Meu nome é Emanuel Jesus Santos, estou cursando Análise e Desenvolvimento de Sistemas no
+                        Instituto Federal de Santa Catarina, onde estou no 3º semestre. Sou um
+                        entusiasta da programação e estou constantemente aprimorando meus conhecimentos em diversas
+                        tecnologias.
+                        <br>
+                        Tenho experiência prática em Java, Spring Boot, Python e uma base sólida em HTML, CSS e
+                        JavaScript. Estou sempre aberto a aprender novas linguagens e stacks, pois sou flexível e estou
+                        disposto a me adaptar às necessidades dos projetos.
+                        <br>
+                        Estou em busca de oportunidades para aplicar minhas habilidades de desenvolvimento de software e
+                        contribuir para o sucesso de uma equipe dinâmica e inovadora. Sou um aprendiz rápido e estou
+                        ansioso para enfrentar novos desafios e expandir meu conhecimento técnico.
+                    </p>
+                </div>
+                <div class="about-content-info">
+                    <div>
+                        <p class="content-info-bold">
+                            E-Mail:
+                            <br>
+                            Location:
+                            <br>
+                            Age:
+                        </p>
+                        <p>
+                            Emanuelsantos_677@hotmail.com
+                            <br>
+                            Canoinhas, Santa Catarina
+                            <br>
+                            20
+                        </p>
+                    </div>
+                    <div>
+                        <p class="content-info-bold">
+                            Nationality:
+                            <br>
+                            Education:
+                            <br>
+                            Degree:
+                        </p>
+                        <p>
+                            Brasileiro
+                            <br>
+                            Instituto Federal de Santa Catarina - IFSC
+                            <br>
+                            Curso Superior de Tecnologia
+                        </p>
+                    </div>
+                </div>
+            </div>
         </div>
         <div class="about-status">
-
+            <div>
+                <h1> 1+ </h1>
+                <h3> Years of experience </h3>
+            </div>
+            <div>
+                <h1> 10+ </h1>
+                <h3> Completed projects </h3>
+            </div>
+            <div>
+                <h1> 0.5+ </h1>
+                <h3> Satisfied clients </h3>
+            </div>
         </div>
     </section>
 </body>
