Finalização da sessão contact e footer

--- a/Index.html
+++ b/Index.html
@@ -24,107 +24,142 @@
         <div class="navbar">
             <nav class="navbar-item-container">
                 <a href="#about">About</a>
-                <a href="#">Experience</a>
+                <!-- <a href="#">Experience</a>
                 <a href="#">Skill</a>
-                <a href="#">Portfolio</a>
-                <a href="#">Contact</a>
+                <a href="#">Portfolio</a> -->
+                <a href="#contact">Contact</a>
             </nav>
         </div>
     </header>
 
-    <div id="extend-header">
-        <div class="extend-header-image-container">
-            <img src="img/Profile.png" alt="Profile">
-        </div>
-        <div class="extend-header-item-container">
-            <h1>Emanuel <span>Santos</span></h1>
-            <h6>Full Stack Developer</h6>
-        </div>
-        <div class="extend-header-icon-container">
-            <a href="#about"><i class="bi bi-chevron-double-down"></i></a>
-        </div>
-    </div>
-
-    <section id="about">
-        <div class="about-header">
-            <header>
-                <h1>About Me</h1>
-            </header>
+    <main id="main">
+        <div id="extend-header">
+            <div class="extend-header-image-container">
+                <img src="img/Profile.png" alt="Profile">
+            </div>
+            <div class="extend-header-item-container">
+                <h1>Emanuel <span>Santos</span></h1>
+                <h6>Full Stack Developer</h6>
+            </div>
+            <div class="extend-header-icon-container">
+                <a href="#about"><i class="bi bi-chevron-double-down"></i></a>
+            </div>
         </div>
 
-        <div class="about-content-container">
-            <div class="about-picture">
-                <img src="img/StatickShock.gif" alt="">
+        <section id="about">
+            <div class="about-header">
+                <header>
+                    <h1>About Me</h1>
+                </header>
             </div>
 
-            <div class="about-content">
-                <div class="about-content-description">
-                    <p>
-                        Meu nome é Emanuel Jesus Santos, estou cursando Análise e Desenvolvimento de Sistemas no
-                        Instituto Federal de Santa Catarina, onde estou no 3º semestre. Sou um
-                        entusiasta da programação e estou constantemente aprimorando meus conhecimentos em diversas
-                        tecnologias.
-                        <br>
-                        Tenho experiência prática em Java, Spring Boot, Python e uma base sólida em HTML, CSS e
-                        JavaScript. Estou sempre aberto a aprender novas linguagens e stacks, pois sou flexível e estou
-                        disposto a me adaptar às necessidades dos projetos.
-                        <br>
-                        Estou em busca de oportunidades para aplicar minhas habilidades de desenvolvimento de software e
-                        contribuir para o sucesso de uma equipe dinâmica e inovadora. Sou um aprendiz rápido e estou
-                        ansioso para enfrentar novos desafios e expandir meu conhecimento técnico.
-                    </p>
+            <div class="about-content-container">
+                <div class="about-picture">
+                    <img src="img/StatickShock.gif" alt="">
                 </div>
-                <div class="about-content-info">
-                    <div>
-                        <p class="content-info-bold">
-                            E-Mail:
-                            <br>
-                            Location:
-                            <br>
-                            Age:
-                        </p>
+
+                <div class="about-content">
+                    <div class="about-content-description">
                         <p>
-                            Emanuelsantos_677@hotmail.com
+                            Meu nome é Emanuel Jesus Santos, estou cursando Análise e Desenvolvimento de Sistemas no
+                            Instituto Federal de Santa Catarina, onde estou no 3º semestre. Sou um
+                            entusiasta da programação e estou constantemente aprimorando meus conhecimentos em diversas
+                            tecnologias.
                             <br>
-                            Canoinhas, Santa Catarina
+                            Tenho experiência prática em Java, Spring Boot, Python e uma base sólida em HTML, CSS e
+                            JavaScript. Estou sempre aberto a aprender novas linguagens e stacks, pois sou flexível e
+                            estou
+                            disposto a me adaptar às necessidades dos projetos.
                             <br>
-                            20
+                            Estou em busca de oportunidades para aplicar minhas habilidades de desenvolvimento de
+                            software e
+                            contribuir para o sucesso de uma equipe dinâmica e inovadora. Sou um aprendiz rápido e estou
+                            ansioso para enfrentar novos desafios e expandir meu conhecimento técnico.
                         </p>
                     </div>
-                    <div>
-                        <p class="content-info-bold">
-                            Nationality:
-                            <br>
-                            Education:
-                            <br>
-                            Degree:
-                        </p>
-                        <p>
-                            Brasileiro
-                            <br>
-                            Instituto Federal de Santa Catarina - IFSC
-                            <br>
-                            Curso Superior de Tecnologia
-                        </p>
+
+                    <div class="about-content-info">
+                        <div>
+                            <p class="content-info-bold">
+                                E-Mail:
+                                <br>
+                                Location:
+                                <br>
+                                Age:
+                            </p>
+                            <p>
+                                Emanuelsantos_677@hotmail.com
+                                <br>
+                                Canoinhas, Santa Catarina
+                                <br>
+                                20
+                            </p>
+                        </div>
+
+                        <div>
+                            <p class="content-info-bold">
+                                Nationality:
+                                <br>
+                                Education:
+                                <br>
+                                Degree:
+                            </p>
+                            <p>
+                                Brasileiro
+                                <br>
+                                Instituto Federal de Santa Catarina - IFSC
+                                <br>
+                                Curso Superior de Tecnologia
+                            </p>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="about-status">
-            <div>
-                <h1> 1+ </h1>
-                <h3> Years of experience </h3>
+
+            <div class="about-status">
+                <div>
+                    <h1> 1+ </h1>
+                    <h3> Years of experience </h3>
+                </div>
+                <div>
+                    <h1> 10+ </h1>
+                    <h3> Completed projects </h3>
+                </div>
+                <div>
+                    <h1> 0.5+ </h1>
+                    <h3> Satisfied clients </h3>
+                </div>
             </div>
-            <div>
-                <h1> 10+ </h1>
-                <h3> Completed projects </h3>
+        </section>
+
+        <section id="contact">
+            <div class="contact-header">
+                <header>
+                    <h1>Contact</h1>
+                </header>
             </div>
-            <div>
-                <h1> 0.5+ </h1>
-                <h3> Satisfied clients </h3>
+
+            <div class="contact-info">
+                <p>
+                    Se você está em busca de um desenvolvedor de software dedicado, curioso e disposto a aprender, estou
+                    pronto para contribuir com meu entusiasmo e habilidades técnicas.
+                </p>
             </div>
-        </div>
-    </section>
+            <div class="contact-btn">
+                <h1><a href="">Write Message</a></h1>
+            </div>
+            <div id="contact-icon">
+                <a href="https://github.com/Emanuel3k" target="_blank"><i class="bi bi-github"></i></a>
+                <a href="https://www.linkedin.com/in/emanuel3k/" target="_blank"><i class="bi bi-linkedin"></i></a>
+                <a href="https://www.instagram.com/_emanuel3k/" target="_blank"><i class="bi bi-instagram"></i></a>
+                <a href="https://twitter.com/_emanuel3k" target="_blank"><i class="bi bi-twitter"></i></a>
+            </div>
+        </section>
+    </main>
+
+    <footer id="footer">
+        <p>Emanuel <span>Santos</span> - 2023</p>
+    </footer>
 </body>
 
 </html>
